added create/update/patch users and some other changes like moving from multiple package project structure to single package (at least for now)
