# src/main.go
@@ -6,25 +6,34 @@ import (
 	"log"
 	"net/http"
 	"os"
+	"path"
+	"strings"
 	"text/template"
 
-	_ "github.com/jackc/pgx/v5/stdlib"
-	"github.com/joho/godotenv"
+	"golang.org/x/crypto/bcrypt"
 
-	"github.com/srumut/ecommerce/storage"
-	"github.com/srumut/ecommerce/utility"
+	"github.com/joho/godotenv"
 )
 
-var templates = template.Must(template.ParseFiles("./template/swagger-ui.html"))
-var db *storage.Storage
+type UserRequestBody struct {
+	Username    string `json:"username"`
+	Email       string `json:"email"`
+	Password    string `json:"password"`
+	DisplayName string `json:"display_name"`
+	IsActive    bool   `json:"is_active"`
+}
+
+var directory = ParentDirectoryOfThisFile()
+var templates = template.Must(template.ParseFiles(path.Join(directory, "../template/swagger-ui.html")))
+var db *Storage
 
 func main() {
 	// load environment variables
-	err := godotenv.Load("./.env")
+	err := godotenv.Load(path.Join(directory, "../.env"))
 	if err != nil {
 		panic("failed to load environment variables from .env")
 	}
-	db, err = storage.InitStorage(os.Getenv("DATABASE_URL"))
+	db, err = InitStorage(os.Getenv("DATABASE_URL"))
 	if err != nil {
 		fmt.Fprintf(os.Stderr, "Failed connecting to the database: %v\n", err)
 		os.Exit(1)
@@ -32,15 +41,21 @@ func main() {
 
 	mux := http.NewServeMux()
 
-	staticFileServer := http.FileServer(http.Dir("./static"))
+	static_dir := path.Join(directory, "../static")
+	staticFileServer := http.FileServer(http.Dir(static_dir))
 	mux.Handle("GET /static/", http.StripPrefix("/static", staticFileServer))
 
 	mux.HandleFunc("GET /swagger", makeHandler(swaggerUIHandler))
 
 	mux.HandleFunc("GET /api/v1/", makeHandler(indexHandler))
+
 	mux.HandleFunc("GET /api/v1/users", makeHandler(fetchAllUsers))
+	mux.HandleFunc("POST /api/v1/users", makeHandler(createSingleUser))
 	mux.HandleFunc("GET /api/v1/users/{username}", makeHandler(fetchSingleUser))
 	mux.HandleFunc("DELETE /api/v1/users/{username}", makeHandler(deleteSingleUser))
+	mux.HandleFunc("PUT /api/v1/users/{username}", makeHandler(updateSingleUser))
+	mux.HandleFunc("PATCH /api/v1/users/{username}", makeHandler(patchSingleUser))
+
 	mux.HandleFunc("GET /api/v1/stores", makeHandler(fetchAllStores))
 	mux.HandleFunc("GET /api/v1/stores/{slug}", makeHandler(fetchSingleStore))
 	mux.HandleFunc("DELETE /api/v1/stores/{slug}", makeHandler(deleteSingleStore))
@@ -61,13 +76,72 @@ func makeHandler(fn func(http.ResponseWriter, *http.Request) error) http.Handler
 }
 
 func fetchAllUsers(w http.ResponseWriter, r *http.Request) error {
-	users, err := db.GetAllUsers()
+	result, err := db.GetAllUsers()
 	if err != nil {
 		return err
 	}
 
 	w.Header().Set("Content-Type", "application/json")
-	err = json.NewEncoder(w).Encode(users)
+	err = json.NewEncoder(w).Encode(result)
+	if err != nil {
+		return err
+	}
+	return nil
+}
+
+func createSingleUser(w http.ResponseWriter, r *http.Request) error {
+	var user UserRequestBody
+	err := json.NewDecoder(r.Body).Decode(&user)
+	if err != nil {
+		return DetailedError(err)
+	}
+
+	var errMsgBuilder strings.Builder
+	if user.Username == "" {
+		errMsgBuilder.WriteString("username")
+	}
+	if user.Email == "" {
+		if errMsgBuilder.Len() != 0 {
+			errMsgBuilder.WriteString(", email")
+		} else {
+			errMsgBuilder.WriteString("email")
+		}
+	}
+	if user.Password == "" {
+		if errMsgBuilder.Len() != 0 {
+			errMsgBuilder.WriteString(", password")
+		} else {
+			errMsgBuilder.WriteString("password")
+		}
+	}
+	if user.DisplayName == "" {
+		if errMsgBuilder.Len() != 0 {
+			errMsgBuilder.WriteString(", display_name")
+		} else {
+			errMsgBuilder.WriteString("display_name")
+		}
+	}
+	if errMsgBuilder.Len() != 0 {
+		return fmt.Errorf("%s field(s) must be provided.", errMsgBuilder.String())
+	}
+
+	password_hash, err := bcrypt.GenerateFromPassword([]byte(user.Password), 10)
+	if err != nil {
+		return DetailedError(err)
+	}
+	user.Password = string(password_hash)
+
+	result, err := db.CreateSingleUser(user)
+	if err != nil {
+		return DetailedError(err)
+	}
+	if result.Username == "" {
+		http.NotFound(w, r)
+		return nil
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	err = json.NewEncoder(w).Encode(result)
 	if err != nil {
 		return err
 	}
@@ -76,16 +150,16 @@ func fetchAllUsers(w http.ResponseWriter, r *http.Request) error {
 
 func fetchSingleUser(w http.ResponseWriter, r *http.Request) error {
 	username := r.PathValue("username")
-	user, err := db.GetSingleUser(username)
+	result, err := db.GetSingleUser(username)
 	if err != nil {
-		return utility.DetailedError(err)
+		return DetailedError(err)
 	}
-	if user.Username == "" {
+	if result.Username == "" {
 		http.NotFound(w, r)
 		return nil
 	}
 	w.Header().Set("Content-Type", "application/json")
-	err = json.NewEncoder(w).Encode(user)
+	err = json.NewEncoder(w).Encode(result)
 	if err != nil {
 		return err
 	}
@@ -94,16 +168,114 @@ func fetchSingleUser(w http.ResponseWriter, r *http.Request) error {
 
 func deleteSingleUser(w http.ResponseWriter, r *http.Request) error {
 	username := r.PathValue("username")
-	user, err := db.DeleteSingleUser(username)
+	result, err := db.DeleteSingleUser(username)
 	if err != nil {
-		return utility.DetailedError(err)
+		return DetailedError(err)
 	}
-	if user.Username == "" {
+	if result.Username == "" {
 		http.NotFound(w, r)
 		return nil
 	}
 	w.Header().Set("Content-Type", "application/json")
-	err = json.NewEncoder(w).Encode(user)
+	err = json.NewEncoder(w).Encode(result)
+	if err != nil {
+		return err
+	}
+	return nil
+}
+
+func updateSingleUser(w http.ResponseWriter, r *http.Request) error {
+	username := r.PathValue("username")
+
+	var user UserRequestBody
+	// NOTE(umut): if is_active is not provided it will be probably set to false
+	err := json.NewDecoder(r.Body).Decode(&user)
+	if err != nil {
+		return DetailedError(err)
+	}
+
+	var errMsgBuilder strings.Builder
+	if user.Username == "" {
+		errMsgBuilder.WriteString("username")
+	}
+	if user.Email == "" {
+		if errMsgBuilder.Len() != 0 {
+			errMsgBuilder.WriteString(", email")
+		} else {
+			errMsgBuilder.WriteString("email")
+		}
+	}
+	if user.Password == "" {
+		if errMsgBuilder.Len() != 0 {
+			errMsgBuilder.WriteString(", password")
+		} else {
+			errMsgBuilder.WriteString("password")
+		}
+	}
+	if user.DisplayName == "" {
+		if errMsgBuilder.Len() != 0 {
+			errMsgBuilder.WriteString(", display_name")
+		} else {
+			errMsgBuilder.WriteString("display_name")
+		}
+	}
+	if errMsgBuilder.Len() != 0 {
+		return fmt.Errorf("%s field(s) must be provided.", errMsgBuilder.String())
+	}
+
+	password_hash, err := bcrypt.GenerateFromPassword([]byte(user.Password), 10)
+	if err != nil {
+		return DetailedError(err)
+	}
+
+	user.Password = string(password_hash)
+	result, err := db.UpdateSingleUser(username, user)
+	if err != nil {
+		return DetailedError(err)
+	}
+	// TODO(umut): should handle this case better
+	if result.Username == "" {
+		http.NotFound(w, r)
+		return nil
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	err = json.NewEncoder(w).Encode(result)
+	if err != nil {
+		return err
+	}
+	return nil
+}
+
+func patchSingleUser(w http.ResponseWriter, r *http.Request) error {
+	username := r.PathValue("username")
+
+	var user UserRequestBody
+	err := json.NewDecoder(r.Body).Decode(&user)
+	if err != nil {
+		return DetailedError(err)
+	}
+
+	if user.Password != "" {
+		password_hash, err := bcrypt.GenerateFromPassword([]byte(user.Password), 10)
+		if err != nil {
+			return DetailedError(err)
+		}
+		user.Password = string(password_hash)
+	}
+
+	result, err := db.PatchSingleUser(username, user)
+	if err != nil {
+		return DetailedError(err)
+	}
+	// TODO(umut): should handle this case better
+	if result.Username == "" {
+		http.NotFound(w, r)
+		return nil
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	err = json.NewEncoder(w).Encode(result)
 	if err != nil {
 		return err
 	}
@@ -111,13 +283,13 @@ func deleteSingleUser(w http.ResponseWriter, r *http.Request) error {
 }
 
 func fetchAllStores(w http.ResponseWriter, r *http.Request) error {
-	stores, err := db.GetAllStores()
+	result, err := db.GetAllStores()
 	if err != nil {
 		return err
 	}
 
 	w.Header().Set("Content-Type", "application/json")
-	err = json.NewEncoder(w).Encode(stores)
+	err = json.NewEncoder(w).Encode(result)
 	if err != nil {
 		return err
 	}
@@ -126,16 +298,16 @@ func fetchAllStores(w http.ResponseWriter, r *http.Request) error {
 
 func fetchSingleStore(w http.ResponseWriter, r *http.Request) error {
 	slug := r.PathValue("slug")
-	store, err := db.GetSingleStore(slug)
+	result, err := db.GetSingleStore(slug)
 	if err != nil {
-		return utility.DetailedError(err)
+		return DetailedError(err)
 	}
-	if store.Slug == "" {
+	if result.Slug == "" {
 		http.NotFound(w, r)
 		return nil
 	}
 	w.Header().Set("Content-Type", "application/json")
-	err = json.NewEncoder(w).Encode(store)
+	err = json.NewEncoder(w).Encode(result)
 	if err != nil {
 		return err
 	}
@@ -144,16 +316,16 @@ func fetchSingleStore(w http.ResponseWriter, r *http.Request) error {
 
 func deleteSingleStore(w http.ResponseWriter, r *http.Request) error {
 	slug := r.PathValue("slug")
-	store, err := db.DeleteSingleStore(slug)
+	result, err := db.DeleteSingleStore(slug)
 	if err != nil {
-		return utility.DetailedError(err)
+		return DetailedError(err)
 	}
-	if store.Slug == "" {
+	if result.Slug == "" {
 		http.NotFound(w, r)
 		return nil
 	}
 	w.Header().Set("Content-Type", "application/json")
-	err = json.NewEncoder(w).Encode(store)
+	err = json.NewEncoder(w).Encode(result)
 	if err != nil {
 		return err
 	}
@@ -161,13 +333,13 @@ func deleteSingleStore(w http.ResponseWriter, r *http.Request) error {
 }
 
 func fetchUsersAndStores(w http.ResponseWriter, r *http.Request) error {
-	userStores, err := db.GetAllUserStores()
+	result, err := db.GetAllUserStores()
 	if err != nil {
 		return err
 	}
 
 	w.Header().Set("Content-Type", "application/json")
-	err = json.NewEncoder(w).Encode(userStores)
+	err = json.NewEncoder(w).Encode(result)
 	if err != nil {
 		return err
 	}
